--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 *.Po
 .deps/
 doc/
+man/
 
 # Prerequisites
 *.d
@@ -103,7 +104,7 @@ Makefile.in
 /apps/libxml2-2.7.8/
 #/apps/nginx-1.8.1/
 /apps/ntp-4.2.8p3/
-/apps/openssl-1.0.1j/
+#/apps/openssl-1.0.1j/
 #/apps/pcre-8.35/
 /apps/php-5.4.45/
 #/apps/sqlite-autoconf-3080403/
