--- a/apps/libxml2-2.7.8/doc/devhelp/Makefile
+++ b/apps/libxml2-2.7.8/doc/devhelp/Makefile
@@ -49,13 +49,13 @@ CONFIG_CLEAN_VPATH_FILES =
 SOURCES =
 DIST_SOURCES =
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /opt/micro_ac.bak/apps/libxml2-2.7.8/missing --run aclocal-1.11
-AMTAR = ${SHELL} /opt/micro_ac.bak/apps/libxml2-2.7.8/missing --run tar
+ACLOCAL = ${SHELL} /opt/micro_ac/apps/libxml2-2.7.8/missing --run aclocal-1.11
+AMTAR = ${SHELL} /opt/micro_ac/apps/libxml2-2.7.8/missing --run tar
 AR = ar
 AS = as
-AUTOCONF = ${SHELL} /opt/micro_ac.bak/apps/libxml2-2.7.8/missing --run autoconf
-AUTOHEADER = ${SHELL} /opt/micro_ac.bak/apps/libxml2-2.7.8/missing --run autoheader
-AUTOMAKE = ${SHELL} /opt/micro_ac.bak/apps/libxml2-2.7.8/missing --run automake-1.11
+AUTOCONF = ${SHELL} /opt/micro_ac/apps/libxml2-2.7.8/missing --run autoconf
+AUTOHEADER = ${SHELL} /opt/micro_ac/apps/libxml2-2.7.8/missing --run autoheader
+AUTOMAKE = ${SHELL} /opt/micro_ac/apps/libxml2-2.7.8/missing --run automake-1.11
 AWK = gawk
 BASE_THREAD_LIBS = -lpthread
 C14N_OBJ = c14n.c
@@ -109,7 +109,7 @@ LIBXML_VERSION_NUMBER = 20708
 LIPO = 
 LN_S = ln -s
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /opt/micro_ac.bak/apps/libxml2-2.7.8/missing --run makeinfo
+MAKEINFO = ${SHELL} /opt/micro_ac/apps/libxml2-2.7.8/missing --run makeinfo
 MKDIR_P = /usr/bin/mkdir -p
 MODULE_EXTENSION = .so
 MODULE_PLATFORM_LIBS = -ldl
@@ -219,10 +219,10 @@ XPTR_OBJ = xpointer.o
 XSLTPROC = /usr/bin/xsltproc
 Z_CFLAGS = 
 Z_LIBS = -lz
-abs_builddir = /opt/micro_ac.bak/apps/libxml2-2.7.8/doc/devhelp
-abs_srcdir = /opt/micro_ac.bak/apps/libxml2-2.7.8/doc/devhelp
-abs_top_builddir = /opt/micro_ac.bak/apps/libxml2-2.7.8
-abs_top_srcdir = /opt/micro_ac.bak/apps/libxml2-2.7.8
+abs_builddir = /opt/micro_ac/apps/libxml2-2.7.8/doc/devhelp
+abs_srcdir = /opt/micro_ac/apps/libxml2-2.7.8/doc/devhelp
+abs_top_builddir = /opt/micro_ac/apps/libxml2-2.7.8
+abs_top_srcdir = /opt/micro_ac/apps/libxml2-2.7.8
 ac_ct_CC = gcc
 ac_ct_DUMPBIN = 
 am__include = include
@@ -250,7 +250,7 @@ host_vendor = unknown
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /opt/micro_ac.bak/apps/libxml2-2.7.8/install-sh
+install_sh = ${SHELL} /opt/micro_ac/apps/libxml2-2.7.8/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
