--- a/apps/openssl-1.0.1j/Makefile
+++ b/apps/openssl-1.0.1j/Makefile
@@ -1,6 +1,6 @@
 ### Generated automatically from Makefile.org by Configure.
 
-### Generated automatically from Makefile.org by Configure..
+### Generated automatically from Makefile.org by Configure.
 
 ### Generated automatically from Makefile.org by Configure.
 
