--- a/apps/dhcpd-pools-2.25/lib/Makefile
+++ b/apps/dhcpd-pools-2.25/lib/Makefile
@@ -286,16 +286,16 @@ am__relativize = \
   done; \
   reldir="$$dir2"
 pkglibexecdir = ${libexecdir}/${PACKAGE}
-ACLOCAL = ${SHELL} /opt/micro_ac/apps/dhcpd-pools-2.25/build-aux/missing aclocal-1.99a
+ACLOCAL = ${SHELL} /opt/micro_ac.bak/apps/dhcpd-pools-2.25/build-aux/missing aclocal-1.99a
 ALARM_CRIT = 90
 ALARM_WARN = 80
 AMTAR = $${TAR-tar}
 AM_DEFAULT_VERBOSITY = 1
 AR = ar
 ARFLAGS = cru
-AUTOCONF = ${SHELL} /opt/micro_ac/apps/dhcpd-pools-2.25/build-aux/missing autoconf
-AUTOHEADER = ${SHELL} /opt/micro_ac/apps/dhcpd-pools-2.25/build-aux/missing autoheader
-AUTOMAKE = ${SHELL} /opt/micro_ac/apps/dhcpd-pools-2.25/build-aux/missing automake-1.99a
+AUTOCONF = ${SHELL} /opt/micro_ac.bak/apps/dhcpd-pools-2.25/build-aux/missing autoconf
+AUTOHEADER = ${SHELL} /opt/micro_ac.bak/apps/dhcpd-pools-2.25/build-aux/missing autoheader
+AUTOMAKE = ${SHELL} /opt/micro_ac.bak/apps/dhcpd-pools-2.25/build-aux/missing automake-1.99a
 AWK = gawk
 CC = gcc -std=gnu11
 CCDEPMODE = depmode=gcc3
@@ -804,7 +804,7 @@ LOCALE_JA = ja_JP
 LOCALE_ZH_CN = zh_CN.GB18030
 LTLIBINTL = 
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /opt/micro_ac/apps/dhcpd-pools-2.25/build-aux/missing makeinfo
+MAKEINFO = ${SHELL} /opt/micro_ac.bak/apps/dhcpd-pools-2.25/build-aux/missing makeinfo
 MANIFEST_TOOL = :
 MKDIR_P = /usr/bin/mkdir -p
 NETINET_IN_H = 
@@ -1012,10 +1012,10 @@ UNISTD_H_HAVE_WINSOCK2_H_AND_USE_SOCKETS = 0
 VERSION = 2.25
 WINDOWS_64_BIT_OFF_T = 0
 WINDOWS_64_BIT_ST_SIZE = 0
-abs_builddir = /opt/micro_ac/apps/dhcpd-pools-2.25/lib
-abs_srcdir = /opt/micro_ac/apps/dhcpd-pools-2.25/lib
-abs_top_builddir = /opt/micro_ac/apps/dhcpd-pools-2.25
-abs_top_srcdir = /opt/micro_ac/apps/dhcpd-pools-2.25
+abs_builddir = /opt/micro_ac.bak/apps/dhcpd-pools-2.25/lib
+abs_srcdir = /opt/micro_ac.bak/apps/dhcpd-pools-2.25/lib
+abs_top_builddir = /opt/micro_ac.bak/apps/dhcpd-pools-2.25
+abs_top_srcdir = /opt/micro_ac.bak/apps/dhcpd-pools-2.25
 ac_ct_AR = ar
 ac_ct_CC = gcc
 ac_ct_DUMPBIN = 
@@ -1048,7 +1048,7 @@ host_vendor = unknown
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /opt/micro_ac/apps/dhcpd-pools-2.25/build-aux/install-sh
+install_sh = ${SHELL} /opt/micro_ac.bak/apps/dhcpd-pools-2.25/build-aux/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 lispdir = ${datarootdir}/emacs/site-lisp
